Lined up Experiment tag with x-height of logo text. And fixed overflowing issue. Repositioned help links as a result.

--- a/style/app.scss
+++ b/style/app.scss
@@ -118,6 +118,7 @@ a:not([class~="button"]):hover {
     @include valign;
     padding: 5px 10px 0 15px;
     box-sizing: border-box;
+    overflow: hidden;
     
     -webkit-justify-content: space-between;
 
@@ -135,11 +136,12 @@ a:not([class~="button"]):hover {
     .experiment {
         display: inline-block;
         background: url(../img/experiment.png) no-repeat;
+        position: relative;
+        left: 2px;
+        top: 3px;
         width: 69px;
         height: 18px;
         text-indent: -9999px;
-        vertical-align: bottom;
-        padding-bottom: 3px;
     }
     
     .button.drop-down{
@@ -216,10 +218,9 @@ a:not([class~="button"]):hover {
 
 .right {
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 15px;
+    top: 13px;
     bottom: 0px;
-    left: 320px;
     overflow: hidden;
 
     .nav {
